--- a/app/templates/admin/user_management/add_user.html
+++ b/app/templates/admin/user_management/add_user.html
@@ -22,12 +22,12 @@
                 <img src="{{ url_for('static', filename='images/User Management.png') }}"> 
                 <p>User Management</p>
             </li>
-            <a href="{{ url_for('admin.profile') }}">
+            <!-- <a href="{{ url_for('admin.profile') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
                     <p>Profile</p>
                 </li>
-            </a>
+            </a> -->
         </ul>
         <div class="foot-nav">
             <div class="sidenav-user-bg">
