--- a/app/templates/medtech/patient.html
+++ b/app/templates/medtech/patient.html
@@ -17,12 +17,12 @@
                 <img src="{{ url_for('static', filename='images/Patient Record.png') }}"> 
                 <p>Patient</p>
             </li>
-            <a href="{{ url_for('medtech.profile') }}">
+            <!-- <a href="{{ url_for('medtech.profile') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
                     <p>Profile</p>
                 </li>
-            </a>
+            </a> -->
         </ul>
         <div class="foot-nav">
             <div class="sidenav-user-bg">
