--- a/app/templates/receptionist/appointment/appointment_sidebar.html
+++ b/app/templates/receptionist/appointment/appointment_sidebar.html
@@ -9,12 +9,12 @@
                 <p>Dashboard</p>
             </li>
         </a>    
-        <a href="{{ url_for('receptionist.calendar') }}">
+        <!-- <a href="{{ url_for('receptionist.calendar') }}">
             <li class="icon-bg">
                 <img src="{{ url_for('static', filename='images/Calendar.png') }}"> 
                 <p>Calendar</p>
             </li>
-        </a>
+        </a> -->
         <li class="selected-icon-bg">
             <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
             <p>Appointment</p>
@@ -31,12 +31,12 @@
                 <p>Patient</p>
             </li>
         </a>
-        <a href="{{ url_for('receptionist.profile') }}">
+        <!-- <a href="{{ url_for('receptionist.profile') }}">
             <li class="icon-bg">
                 <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
                 <p>Profile</p>
             </li>
-        </a>
+        </a> -->
     </ul>
     <div class="foot-nav">
         <div class="sidenav-user-bg">
