--- a/app/templates/admin/profile.html
+++ b/app/templates/admin/profile.html
@@ -22,10 +22,10 @@
                     <p>User Management</p>
                 </li>
             </a>
-            <li class="selected-icon-bg">
+            <!-- <li class="selected-icon-bg">
                 <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
                 <p>Profile</p>
-            </li>
+            </li> -->
         </ul>
         <div class="foot-nav">
             <div class="sidenav-user-bg">
