--- a/app/templates/doctor/appointment/appointment.html
+++ b/app/templates/doctor/appointment/appointment.html
@@ -13,12 +13,12 @@
                     <p>Dashboard</p>
                 </li>
             </a>
-            <a href="{{ url_for('doctor.calendar') }}">
+            <!-- <a href="{{ url_for('doctor.calendar') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Calendar.png') }}"> 
                     <p>Calendar</p>
                 </li>
-            </a>
+            </a> -->
             <li class="selected-icon-bg">
                 <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
                 <p>Appointment</p>
@@ -35,12 +35,12 @@
                     <p>Patient</p>
                 </li>
             </a>
-            <a href="{{ url_for('doctor.profile') }}">
+            <!-- <a href="{{ url_for('doctor.profile') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
                     <p>Profile</p>
                 </li>
-            </a>
+            </a> -->
         </ul>
         <div class="foot-nav">
             <div class="sidenav-user-bg">
