--- a/app/templates/doctor/patient/labtest_request.html
+++ b/app/templates/doctor/patient/labtest_request.html
@@ -18,12 +18,12 @@
                     <p>Dashboard</p>
                 </li>
             </a>
-            <a href="{{ url_for('doctor.calendar') }}">
+            <!-- <a href="{{ url_for('doctor.calendar') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Calendar.png') }}"> 
                     <p>Calendar</p>
                 </li>
-            </a>
+            </a> -->
             <a href="{{ url_for('doctor.appointment') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
@@ -40,12 +40,12 @@
                 <img src="{{ url_for('static', filename='images/Patient Record.png') }}"> 
                 <p>Patient</p>
             </li>
-            <a href="{{ url_for('doctor.profile') }}">
+            <!-- <a href="{{ url_for('doctor.profile') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
                     <p>Profile</p>
                 </li>
-            </a>
+            </a> -->
         </ul>
         <div class="foot-nav">
             <div class="sidenav-user-bg">
