--- a/app/templates/doctor/patient/results.html
+++ b/app/templates/doctor/patient/results.html
@@ -18,12 +18,12 @@
                     <p>Dashboard</p>
                 </li>
             </a>
-            <a href="{{ url_for('doctor.calendar') }}">
+            <!-- <a href="{{ url_for('doctor.calendar') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Calendar.png') }}"> 
                     <p>Calendar</p>
                 </li>
-            </a>
+            </a> -->
             <a href="{{ url_for('doctor.appointment') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
@@ -40,12 +40,12 @@
                 <img src="{{ url_for('static', filename='images/Patient Record.png') }}"> 
                 <p>Patient</p>
             </li>
-            <a href="{{ url_for('doctor.profile') }}">
+            <!-- <a href="{{ url_for('doctor.profile') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
                     <p>Profile</p>
                 </li>
-            </a>
+            </a> -->
         </ul>
         <div class="foot-nav">
             <div class="sidenav-user-bg">
@@ -99,14 +99,14 @@
 
                             <div class="p_row rowOne">
                                 <div class="inputBox labsubject">
-                                    <input type="text" name="labsubject" value="{{ labreq[4] }}" disabled>
+                                    <input type="text" name="labsubject" value="{{ labreq[3] }}" disabled>
                                     <span>TESTING PURPOSE</span>
                                 </div>
                             </div>
 
                             <div class="p_row rowTwo">
                                 <div class="inputBox fullName">
-                                    <input type="text" name="fullName" value="{{ labreq[3] }}" disabled>
+                                    <input type="text" name="fullName" value="{{ labreq[2] }}" disabled>
                                     <span>PATIENT NAME</span>
                                 </div>
                             </div>
@@ -115,21 +115,21 @@
                                 <div class="inputBox gender">
                                     <select class="gender" name="gender" disabled>
                                         <option value="" disabled selected></option>
-                                        <option value="FEMALE" {% if labreq[5] == "FEMALE" %} selected {% endif %}>FEMALE</option>
-                                        <option value="MALE" {% if labreq[5] == "MALE" %} selected {% endif %}>MALE</option>
+                                        <option value="FEMALE" {% if labreq[4] == "FEMALE" %} selected {% endif %}>FEMALE</option>
+                                        <option value="MALE" {% if labreq[4] == "MALE" %} selected {% endif %}>MALE</option>
                                     </select>
                                     <span>GENDER</span>
                                 </div>
                                 <div class="inputBox age">
-                                    <input type="text" name="age" value="{{ labreq[6] }}" disabled>
+                                    <input type="text" name="age" value="{{ labreq[5] }}" disabled>
                                     <span>AGE</span>
                                 </div>
                                 <div class="inputBox doctorName">
-                                    <input type="text" name="doctorName"  value="{{ labreq[7] }}" disabled>
+                                    <input type="text" name="doctorName"  value="{{ labreq[6] }}" disabled>
                                     <span>DOCTOR</span>
                                 </div>
                                 <div class="inputBox dateofRequest">
-                                    <input type="text" name="dateofRequest" id="dateofRequest" value="{{ labreq[8] }}" disabled> 
+                                    <input type="text" name="dateofRequest" id="dateofRequest" value="{{ labreq[7] }}" disabled> 
                                     <span>DATE OF REQUEST</span>
                                 </div>
                             </div>
@@ -597,7 +597,7 @@
 
                                 <center>
                                     <div class="inputBox longtext">
-                                        <input type="text" name="others" value="{{ labreq[9] }}" disabled>
+                                        <input type="text" name="others" value="{{ labreq[8] }}" disabled>
                                         <span>OTHERS <em>(specify)</em></span>
                                     </div>
                                 </center>
