--- a/app/templates/medtech/dashboard.html
+++ b/app/templates/medtech/dashboard.html
@@ -21,12 +21,12 @@
                     <p>Patient</p>
                 </li>
             </a>
-            <a href="{{ url_for('medtech.profile') }}">
+            <!-- <a href="{{ url_for('medtech.profile') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
                     <p>Profile</p>
                 </li>
-            </a>
+            </a> -->
         </ul>
         <div class="foot-nav">
             <div class="sidenav-user-bg">
