--- a/app/templates/medtech/profile.html
+++ b/app/templates/medtech/profile.html
@@ -19,10 +19,10 @@
                     <p>Patient</p>
                 </li>
             </a>
-            <li class="selected-icon-bg">
+            <!-- <li class="selected-icon-bg">
                 <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
                 <p>Profile</p>
-            </li>
+            </li> -->
         </ul>
         <div class="foot-nav">
             <div class="sidenav-user-bg">
