--- a/app/templates/receptionist/dashboard/dashboard.html
+++ b/app/templates/receptionist/dashboard/dashboard.html
@@ -16,12 +16,12 @@
                 <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
                 <p>Dashboard</p>
             </li>
-            <a href="{{ url_for('receptionist.calendar') }}">
+            <!-- <a href="{{ url_for('receptionist.calendar') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Calendar.png') }}"> 
                     <p>Calendar</p>
                 </li>
-            </a>
+            </a> -->
             <a href="{{ url_for('receptionist.appointment') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
@@ -40,12 +40,12 @@
                     <p>Patient</p>
                 </li>
             </a>
-            <a href="{{ url_for('receptionist.profile') }}">
+            <!-- <a href="{{ url_for('receptionist.profile') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
                     <p>Profile</p>
                 </li>
-            </a>
+            </a> -->
         </ul>
         <div class="foot-nav">
             <div class="sidenav-user-bg">
