--- a/app/templates/receptionist/schedule/schedule.html
+++ b/app/templates/receptionist/schedule/schedule.html
@@ -15,12 +15,12 @@
                     <p>Dashboard</p>
                 </li>
             </a>    
-            <a href="{{ url_for('receptionist.calendar') }}">
+            <!-- <a href="{{ url_for('receptionist.calendar') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Calendar.png') }}"> 
                     <p>Calendar</p>
                 </li>
-            </a>
+            </a> -->
             <a href="{{ url_for('receptionist.appointment') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
@@ -37,12 +37,12 @@
                     <p>Patient</p>
                 </li>
             </a>
-            <a href="{{ url_for('receptionist.profile') }}">
+            <!-- <a href="{{ url_for('receptionist.profile') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
                     <p>Profile</p>
                 </li>
-            </a>
+            </a> -->
         </ul>
         <div class="foot-nav">
             <div class="sidenav-user-bg">
