Minor changes in UI.

--- a/app/templates/doctor/patient/certificate.html
+++ b/app/templates/doctor/patient/certificate.html
@@ -763,7 +763,7 @@
                             </div>
                         </div>
                         
-                        <div id="toggleContent7">
+                        <div id="toggleContent7" style="display: none;">
                             <div class="med-header history">MEDICAL CERTIFICATE</div>
                             <textarea id="sectionToPrint" class="clearance_textarea" name="certificate_textarea" rows="2" placeholder="Enter the results from the examination for the certificate">{{ certificate[15] }}</textarea>  
                         </div>
